Refactor and added AWS Lambda runtime

--- a/calculate-models/ModelCalculation.ipynb
+++ b/calculate-models/ModelCalculation.ipynb
@@ -8,8 +8,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,26 +23,27 @@
     "import json\n",
     "import subprocess\n",
     "import shutil\n",
-    "\n",
     "import lithops\n",
     "from lithops.storage import Storage\n",
     "\n",
     "import numpy as np\n",
     "import pdal\n",
     "from osgeo import gdal\n",
-    "from scipy import ndimage"
+    "from scipy import ndimage\n",
+    "\n",
+    "from posixpath import join as posix_join\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATA_BUCKET = 'cb-geospatial-wildfire'\n",
-    "COMPUTE_BACKEND = 'localhost'\n",
-    "STORAGE_BACKEND = 'localhost'\n",
-    "STORAGE_PREFIX = 'localhost://'\n",
+    "DATA_BUCKET = 'cb-geospatial-wildfirev1'\n",
+    "COMPUTE_BACKEND = 'aws_lambda'\n",
+    "STORAGE_BACKEND = 'aws_s3'\n",
+    "STORAGE_PREFIX = 'aws_s3://'\n",
     "INPUT_DATA_PREFIX = 'input-las-tiles/'"
    ]
   },
@@ -50,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,18 +84,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 220,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-02-02 16:06:04,791 [INFO] aws_s3.py:68 -- S3 client created - Region: eu-west-1\n"
+     ]
+    }
+   ],
    "source": [
     "storage = Storage(backend=STORAGE_BACKEND)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 221,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Uploading input-las-tiles/lidarcatv01ls12f390612ed03.laz...\n",
+      "Ok!\n",
+      "Uploading input-las-tiles/lidarcatv01ls12f390614ed03.laz...\n",
+      "Ok!\n",
+      "Uploading input-las-tiles/lidarcatv01ls12f390616ed03.laz...\n",
+      "Ok!\n",
+      "Uploading input-las-tiles/lidarcatv01ls12f390618ed03.laz...\n",
+      "Ok!\n"
+     ]
+    }
+   ],
    "source": [
     "bucket_objects = storage.list_keys(bucket=DATA_BUCKET)\n",
     "\n",
@@ -114,16 +143,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 222,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['input-las-tiles/lidarcatv01ls12f390612ed03.laz',\n",
+       " 'input-las-tiles/lidarcatv01ls12f390614ed03.laz',\n",
+       " 'input-las-tiles/lidarcatv01ls12f390616ed03.laz',\n",
+       " 'input-las-tiles/lidarcatv01ls12f390618ed03.laz']"
+      ]
+     },
+     "execution_count": 222,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "storage.list_keys(bucket=DATA_BUCKET)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 223,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,8 +228,8 @@
     "    }\n",
     "    dsm_pipeline_json_str = json.dumps(dsm_pipeline_json, indent=4)\n",
     "    pipeline = pdal.Pipeline(dsm_pipeline_json_str)\n",
-    "    pipeline.validate()\n",
-    "    pipeline.loglevel = 8\n",
+    "    #pipeline.validate()\n",
+    "    #pipeline.loglevel = 8\n",
     "    print('Executing DSM pipeline...')\n",
     "    result = pipeline.execute()\n",
     "    print(result)\n",
@@ -244,8 +287,8 @@
     "    }\n",
     "    dem_pipeline_json_str = json.dumps(dem_pipeline_json, indent=4)\n",
     "    pipeline = pdal.Pipeline(dem_pipeline_json_str)\n",
-    "    pipeline.validate()  # Check if json options are good\n",
-    "    pipeline.loglevel = 8\n",
+    "    #pipeline.validate()  # Check if json options are good\n",
+    "    #pipeline.loglevel = 8\n",
     "    print('Executing DEM pipeline...')\n",
     "    result = pipeline.execute()\n",
     "    print(result)\n",
@@ -280,7 +323,7 @@
     "    rows = in_ds.RasterYSize\n",
     "    cols = in_ds.RasterXSize\n",
     "    in_band = in_ds.GetRasterBand(1)\n",
-    "    data = in_band.ReadAsArray(0, 0, cols, rows).astype(np.float)\n",
+    "    data = in_band.ReadAsArray(0, 0, cols, rows).astype(np.float64)\n",
     "    data[data > FCC_BREAKPOINT] = 1\n",
     "    data[data <= FCC_BREAKPOINT] = 0\n",
     "\n",
@@ -322,45 +365,172 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 224,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-02-02 16:06:32,202 [INFO] config.py:139 -- Lithops v3.1.0 - Python3.10\n",
+      "2024-02-02 16:06:32,210 [INFO] aws_s3.py:68 -- S3 client created - Region: eu-west-1\n",
+      "2024-02-02 16:06:33,971 [INFO] aws_lambda.py:106 -- AWS Lambda client created - Region: eu-west-1\n"
+     ]
+    }
+   ],
    "source": [
     "fexec = lithops.FunctionExecutor()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 225,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'aws_s3://cb-geospatial-wildfirev1\\\\input-las-tiles/'"
+      ]
+     },
+     "execution_count": 225,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "os.path.join(STORAGE_PREFIX, DATA_BUCKET, INPUT_DATA_PREFIX)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 226,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-02-02 16:06:34,040 [INFO] invokers.py:107 -- ExecutorID 4f70d2-18 | JobID M000 - Selected Runtime: monitoring5 - 3007MB\n",
+      "2024-02-02 16:06:34,574 [INFO] invokers.py:172 -- ExecutorID 4f70d2-18 | JobID M000 - Starting function invocation: calculate_models() - Total: 4 activations\n",
+      "2024-02-02 16:06:34,578 [INFO] invokers.py:208 -- ExecutorID 4f70d2-18 | JobID M000 - View execution logs at C:\\Users\\ubena\\AppData\\Local\\Temp\\lithops-root\\logs\\4f70d2-18-M000.log\n"
+     ]
+    }
+   ],
    "source": [
-    "fs = fexec.map(calculate_models, os.path.join(STORAGE_PREFIX, DATA_BUCKET, INPUT_DATA_PREFIX))"
+    "fs = fexec.map(calculate_models, posix_join(STORAGE_PREFIX, DATA_BUCKET, INPUT_DATA_PREFIX))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 227,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-02-02 16:06:34,608 [INFO] wait.py:98 -- ExecutorID 4f70d2-18 - Getting results from 4 function activations\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d6d99e5c01164abc92d98f8586343d45",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "    0%|          | 0/4  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-02-02 16:08:18,435 [INFO] executors.py:596 -- ExecutorID 4f70d2-18 - Cleaning temporary data\n"
+     ]
+    }
+   ],
    "source": [
     "res = fexec.get_result(fs=fs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 228,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/tmp/geo/\n",
+      "/tmp/geo/lidarcatv01ls12f390612ed03.laz\n",
+      "/tmp/geo/dem\n",
+      "/tmp/geo/dem/lidarcatv01ls12f390612ed03.gtiff\n",
+      "/tmp/geo/slope\n",
+      "/tmp/geo/slope/lidarcatv01ls12f390612ed03.tiff\n",
+      "/tmp/geo/fcc\n",
+      "/tmp/geo/fcc/lidarcatv01ls12f390612ed03.tiff\n",
+      "/tmp/geo/dsm\n",
+      "/tmp/geo/dsm/lidarcatv01ls12f390612ed03.gtiff\n",
+      "/tmp/geo/aspect\n",
+      "/tmp/geo/aspect/lidarcatv01ls12f390612ed03.tiff\n",
+      "/tmp/geo/chm\n",
+      "/tmp/geo/chm/lidarcatv01ls12f390612ed03.tiff\n",
+      "---\n",
+      "/tmp/geo/\n",
+      "/tmp/geo/dem\n",
+      "/tmp/geo/dem/lidarcatv01ls12f390614ed03.gtiff\n",
+      "/tmp/geo/slope\n",
+      "/tmp/geo/slope/lidarcatv01ls12f390614ed03.tiff\n",
+      "/tmp/geo/fcc\n",
+      "/tmp/geo/fcc/lidarcatv01ls12f390614ed03.tiff\n",
+      "/tmp/geo/dsm\n",
+      "/tmp/geo/dsm/lidarcatv01ls12f390614ed03.gtiff\n",
+      "/tmp/geo/lidarcatv01ls12f390614ed03.laz\n",
+      "/tmp/geo/aspect\n",
+      "/tmp/geo/aspect/lidarcatv01ls12f390614ed03.tiff\n",
+      "/tmp/geo/chm\n",
+      "/tmp/geo/chm/lidarcatv01ls12f390614ed03.tiff\n",
+      "---\n",
+      "/tmp/geo/\n",
+      "/tmp/geo/dem\n",
+      "/tmp/geo/dem/lidarcatv01ls12f390616ed03.gtiff\n",
+      "/tmp/geo/slope\n",
+      "/tmp/geo/slope/lidarcatv01ls12f390616ed03.tiff\n",
+      "/tmp/geo/fcc\n",
+      "/tmp/geo/fcc/lidarcatv01ls12f390616ed03.tiff\n",
+      "/tmp/geo/dsm\n",
+      "/tmp/geo/dsm/lidarcatv01ls12f390616ed03.gtiff\n",
+      "/tmp/geo/lidarcatv01ls12f390616ed03.laz\n",
+      "/tmp/geo/aspect\n",
+      "/tmp/geo/aspect/lidarcatv01ls12f390616ed03.tiff\n",
+      "/tmp/geo/chm\n",
+      "/tmp/geo/chm/lidarcatv01ls12f390616ed03.tiff\n",
+      "---\n",
+      "/tmp/geo/\n",
+      "/tmp/geo/dem\n",
+      "/tmp/geo/dem/lidarcatv01ls12f390618ed03.gtiff\n",
+      "/tmp/geo/slope\n",
+      "/tmp/geo/slope/lidarcatv01ls12f390618ed03.tiff\n",
+      "/tmp/geo/fcc\n",
+      "/tmp/geo/fcc/lidarcatv01ls12f390618ed03.tiff\n",
+      "/tmp/geo/dsm\n",
+      "/tmp/geo/dsm/lidarcatv01ls12f390618ed03.gtiff\n",
+      "/tmp/geo/lidarcatv01ls12f390618ed03.laz\n",
+      "/tmp/geo/aspect\n",
+      "/tmp/geo/aspect/lidarcatv01ls12f390618ed03.tiff\n",
+      "/tmp/geo/chm\n",
+      "/tmp/geo/chm/lidarcatv01ls12f390618ed03.tiff\n",
+      "---\n"
+     ]
+    }
+   ],
    "source": [
     "for r in res:\n",
     "    print(r.decode('utf-8').strip())\n",
@@ -383,13 +553,10 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "fc28e218f8aa598d7201f1426aba0b64c29ddf364b0850b5108205e3c665e009"
-  },
   "kernelspec": {
-   "display_name": "cloudbutton-geospatial",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "cloudbutton-geospatial"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -401,7 +568,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
