--- a/water-consumption/WaterConsumption.ipynb
+++ b/water-consumption/WaterConsumption.ipynb
@@ -55,6 +55,7 @@
     "import lithops\n",
     "import requests\n",
     "import rasterio\n",
+    "import fiona\n",
     "import json\n",
     "import random\n",
     "import re\n",
@@ -63,7 +64,8 @@
     "from IPython.display import Image\n",
     "import matplotlib.pyplot as plt\n",
     "from lithops.storage import Storage\n",
-    "from lithops.storage.utils import StorageNoSuchKeyError"
+    "from lithops.storage.utils import StorageNoSuchKeyError\n",
+    "from io import BytesIO"
    ]
   },
   {
@@ -113,9 +115,9 @@
    "outputs": [],
    "source": [
     "DATA_BUCKET = 'cloudbutton-geospatial-wc'\n",
-    "COMPUTE_BACKEND = 'ibm_cf'\n",
-    "STORAGE_BACKEND = 'ibm_cos'\n",
-    "STORAGE_PREFIX = 'cos://'\n",
+    "COMPUTE_BACKEND = 'aws_lambda'\n",
+    "STORAGE_BACKEND = 'aws_s3'\n",
+    "STORAGE_PREFIX = 's3://'\n",
     "RUNTIME = 'aitorarjona/cloudbutton-geospatial-wc:01'\n",
     "RUNTIME_MEMORY = 2048"
    ]
@@ -444,16 +446,16 @@
     "    tile_id, _ = os.path.splitext(asc_file_name)\n",
     "    out_path = os.path.join(tempfile.gettempdir(), tile_id + '.tiff')\n",
     "    out_key = os.path.join(DTM_GEOTIFF_PREFIX, tile_id + '.tiff')\n",
-    "    \n",
+    "\n",
     "    try:\n",
     "        out_obj = storage.head_object(bucket=DATA_BUCKET, key=out_key)\n",
     "    except StorageNoSuchKeyError:\n",
     "        out_obj = None\n",
-    "    \n",
+    "\n",
     "    if out_obj:\n",
     "        print(f'GeoTIFF {tile_id} already exists, skipping...')\n",
     "        return out_key\n",
-    "    \n",
+    "\n",
     "    print(f'Converting {tile_id} to GeoTIFF...')\n",
     "    with rasterio.open(obj.data_stream, 'r') as src:\n",
     "        profile = src.profile\n",
@@ -466,11 +468,11 @@
     "        profile.update(interleave='band')\n",
     "        with rasterio.open(out_path, 'w', **profile) as dest:\n",
     "            dest.write(src.read())\n",
-    "    \n",
+    "\n",
     "    with open(out_path, 'rb') as f:\n",
     "        storage.put_object(bucket=DATA_BUCKET, key=out_key, body=f)\n",
-    "    \n",
-    "    return out_key"
+    "\n",
+    "    return out_key\n"
    ]
   },
   {
@@ -547,8 +549,9 @@
    "outputs": [],
    "source": [
     "def get_tile_meta(obj):\n",
+    "    storage = Storage()\n",
     "    tile_id = os.path.splitext(os.path.basename(obj.key))[0]\n",
-    "    with rasterio.open(obj.data_stream, 'r') as src:\n",
+    "    with rasterio.open(BytesIO(storage.get_cloudobject(obj)), 'r') as src:\n",
     "        x1, y1 = src.profile['transform'] * (0, 0)\n",
     "        x2, y2 = src.profile['transform'] * (src.profile['width'], src.profile['height'])\n",
     "    return tile_id, (x1, y1), (x2, y2)"
@@ -687,34 +690,36 @@
     "def data_chunker(obj, n_splits, block_x, block_y, storage):\n",
     "    tile_key = os.path.basename(obj.key)\n",
     "    tile_id, _ = os.path.splitext(tile_key)\n",
-    "    \n",
-    "    with rasterio.open(obj.data_stream) as src:\n",
+    "\n",
+    "    storage = Storage()\n",
+    "\n",
+    "    with rasterio.open(BytesIO(storage.get_cloudobject(obj))) as src:\n",
     "        transform = src.transform\n",
-    "        \n",
+    "\n",
     "        # Compute working window\n",
     "        step_w = src.width / n_splits\n",
     "        step_h = src.height / n_splits\n",
-    "        \n",
+    "\n",
     "        offset_h = round(step_h * block_x)\n",
     "        offset_w = round(step_w * block_y)\n",
-    "        \n",
+    "\n",
     "        profile = src.profile\n",
-    "        \n",
+    "\n",
     "        width = math.ceil(step_w * (block_y + 1) - offset_w)\n",
     "        height = math.ceil(step_h * (block_x + 1) - offset_h)\n",
-    "        \n",
+    "\n",
     "        profile.update(width=width)\n",
     "        profile.update(height=height)\n",
-    "        \n",
+    "\n",
     "        window = Window(offset_w, offset_h, width, height)\n",
-    "        \n",
+    "\n",
     "        chunk_file = os.path.join(tempfile.gettempdir(), tile_id + str(block_x) + '_' + str(block_y) + '.tif')\n",
     "        with rasterio.open(chunk_file, 'w', **profile) as dest:\n",
     "            dest.write(src.read(window=window))\n",
-    "    \n",
+    "\n",
     "    with open(chunk_file, 'rb') as f:\n",
     "        co = storage.put_cloudobject(body=f, bucket=DATA_BUCKET)\n",
-    "    \n",
+    "\n",
     "    return (tile_key, block_x, block_y, co)"
    ]
   },
@@ -825,19 +830,22 @@
    "source": [
     "def compute_solar_irradiation(inputFile, outputFile, crs='32630'):\n",
     "    # Define grass working set\n",
-    "    GRASS_GISDB = 'grassdata'\n",
+    "    GRASS_GISDB = '/tmp/grassdata'\n",
+    "    #GRASS_GISDB = 'grassdata'\n",
     "    GRASS_LOCATION = 'GEOPROCESSING'\n",
     "    GRASS_MAPSET = 'PERMANENT'\n",
     "    GRASS_ELEVATIONS_FILENAME = 'ELEVATIONS'\n",
     "\n",
     "    os.environ['GRASSBIN'] = 'grass76'\n",
+    "\n",
     "    from grass_session import Session\n",
     "    import grass.script as gscript\n",
+    "    import grass.script.setup as gsetup\n",
     "    from grass.pygrass.modules.shortcuts import general\n",
     "    from grass.pygrass.modules.shortcuts import raster\n",
-    "\n",
-    "    os.environ.update(dict(GRASS_COMPRESS_NULLS='1'))\n",
     "    \n",
+    "    os.environ.update(dict(GRASS_COMPRESS_NULLS='1'))\n",
+    "\n",
     "    # Clean previously processed data\n",
     "    if os.path.isdir(GRASS_GISDB):\n",
     "        shutil.rmtree(GRASS_GISDB)\n",
@@ -845,7 +853,6 @@
     "    with Session(gisdb=GRASS_GISDB, location=GRASS_LOCATION, mapset=GRASS_MAPSET, create_opts='EPSG:32630') as ses:\n",
     "        # Set project projection to match elevation raster projection\n",
     "        general.proj(epsg=crs, flags='c') \n",
-    "    \n",
     "        # Load raster file into working directory\n",
     "        raster.import_(input=inputFile, output=GRASS_ELEVATIONS_FILENAME, flags='o')    \n",
     "        \n",
@@ -893,10 +900,12 @@
    "outputs": [],
    "source": [
     "def filter_stations(bounds, stations):\n",
-    "    total_points = MultiPoint([Point(x,y) for x, y in stations[['X', 'Y']].to_numpy()])\n",
+    "    total_points = MultiPoint([Point(x, y) for x, y in stations[['X', 'Y']].to_numpy()])\n",
+    "    total_points_list = list(total_points.geoms)\n",
     "    intersection = bounds.buffer(AREA_OF_INFLUENCE).intersection(total_points)\n",
-    "    \n",
-    "    return stations[[ intersection.contains(point) for point in total_points]]"
+    "    filtered_stations = [point for point in total_points_list if intersection.contains(point)]\n",
+    "\n",
+    "    return stations[[point in filtered_stations for point in total_points_list]]"
    ]
   },
   {
@@ -950,34 +959,35 @@
     "def radiation_interpolation(tile_key, block_x, block_y, chunk_cloudobject, storage):\n",
     "    tile_id, _ = os.path.splitext(tile_key)\n",
     "    print(tile_id)\n",
-    "    \n",
+    "\n",
     "    # Write tile chunk to file\n",
     "    chunk_file = os.path.join(tempfile.gettempdir(), tile_id + str(block_x) + '_' + str(block_y) + '.tif')\n",
     "    print(chunk_file)\n",
+    "\n",
     "    with open(chunk_file, 'wb') as f:\n",
     "        body = storage.get_cloudobject(chunk_cloudobject)\n",
     "        f.write(body)\n",
-    "    \n",
+    "\n",
     "    with rasterio.open(chunk_file, 'r') as chunk_src:\n",
     "        profile = chunk_src.profile\n",
-    "        \n",
+    "\n",
     "    extr_chunk_file = os.path.join(tempfile.gettempdir(), tile_id + '_extr_' + str(block_x) + '_' + str(block_y) + '.tif')\n",
     "    rad_chunk_file = os.path.join(tempfile.gettempdir(), tile_id + '_rad_' + str(block_x) + '_' + str(block_y) + '.tif')\n",
-    "    \n",
+    "\n",
     "    # Compute solar irradiation from inputFile, creates radiation raster at outputFile\n",
     "    extraterrestrial_irradiation = compute_solar_irradiation(inputFile=chunk_file, outputFile=rad_chunk_file)\n",
-    "        \n",
+    "\n",
     "    # Create and store a raster with extraterrestrial irradiation\n",
     "    with rasterio.open(extr_chunk_file, 'w', **profile) as dest:\n",
     "        data = np.full((profile['height'], profile['width']), extraterrestrial_irradiation, dtype='float32')\n",
     "        dest.write(data, 1)\n",
-    "    \n",
+    "\n",
     "    with open(extr_chunk_file, 'rb') as f:\n",
     "        extr_co = storage.put_cloudobject(body=f, bucket=DATA_BUCKET)\n",
-    "    \n",
+    "\n",
     "    with open(rad_chunk_file, 'rb') as f:\n",
     "        rad_co = storage.put_cloudobject(body=f, bucket=DATA_BUCKET)\n",
-    "    \n",
+    "\n",
     "    return [(tile_key, 'extr', block_x, block_y, extr_co), (tile_key, 'rad', block_x, block_y, rad_co)]"
    ]
   },
@@ -994,31 +1004,35 @@
    "source": [
     "def map_interpolation(tile_key, block_x, block_y, chunk_cloudobject, data_field, storage):\n",
     "    tile_id, _ = os.path.splitext(tile_key)\n",
-    "    \n",
+    "\n",
     "    # Get SIAM meteo data\n",
     "    siam_stream = storage.get_object(DATA_BUCKET, siam_data_key, stream=True)\n",
     "    siam_data = pd.read_csv(siam_stream)\n",
-    "    \n",
-    "    chunk = storage.get_cloudobject(chunk_cloudobject, stream=True)\n",
-    "    \n",
-    "    with rasterio.open(chunk) as chunk_src:\n",
+    "\n",
+    "    # print(siam_data)\n",
+    "\n",
+    "    chunk = storage.get_cloudobject(chunk_cloudobject)\n",
+    "\n",
+    "    with rasterio.open(BytesIO(chunk)) as chunk_src:\n",
     "        transform = chunk_src.transform\n",
     "        profile = chunk_src.profile\n",
-    "        \n",
+    "\n",
     "        bounding_rect = box(chunk_src.bounds.left, chunk_src.bounds.top, chunk_src.bounds.right, chunk_src.bounds.bottom)\n",
     "        filtered = pd.DataFrame(filter_stations(bounding_rect, siam_data))\n",
-    "        \n",
+    "        #print(filtered)\n",
+    "\n",
     "        if filtered.shape[0] == 0:\n",
     "            return [(tile_key, data_field, block_x, block_y, None)]\n",
-    "        \n",
+    "\n",
     "        filtered['pixel'] = filtered.apply(lambda station: rasterio.transform.rowcol(transform, station['X'], station['Y']), axis=1)\n",
-    "                \n",
+    "\n",
     "        # Interpolate variables from meteo station data, generate raster with result\n",
     "        dest_chunk_file = os.path.join(tempfile.gettempdir(), tile_id + '_' + data_field + '_' + str(block_x) + '_' + str(block_y) + '.tif')\n",
-    "        \n",
+    "\n",
     "        with rasterio.open(dest_chunk_file, 'w', **profile) as chunk_dest:\n",
     "            if data_field == 'temp':\n",
     "                elevations = chunk_src.read(1)  # Get elevations content\n",
+    "                print(dest_chunk_file)\n",
     "                interpolation = compute_basic_interpolation(elevations.shape, filtered, 'tdet', (0, 0))\n",
     "                interpolation += r * (elevations - zdet)\n",
     "                chunk_dest.write(np.where(elevations == chunk_src.nodata, np.nan, interpolation), 1)\n",
@@ -1034,7 +1048,7 @@
     "    # Upload results to storage as Cloudobject\n",
     "    with open(dest_chunk_file, 'rb') as f:\n",
     "        co = storage.put_cloudobject(body=f, bucket=DATA_BUCKET)\n",
-    "    \n",
+    "\n",
     "    return [(tile_key, data_field, block_x, block_y, co)]"
    ]
   },
@@ -1247,41 +1261,41 @@
    "source": [
     "def merge_blocks(tile_data, chunks, storage):\n",
     "    from rasterio.windows import Window\n",
-    "    \n",
+    "\n",
     "    tile_key, data_field = tile_data\n",
-    "    \n",
+    "\n",
     "    cobjs = [tup[2] for tup in chunks]\n",
     "    if None in cobjs:\n",
     "        return None\n",
-    "    \n",
+    "\n",
     "    # Get width and height from original tile\n",
     "    source_tile_key = os.path.join(DTM_GEOTIFF_PREFIX, tile_key)\n",
-    "    with rasterio.open(storage.get_object(bucket=DATA_BUCKET, key=source_tile_key, stream=True)) as source_tile:\n",
+    "    with rasterio.open(BytesIO(storage.get_object(bucket=DATA_BUCKET, key=source_tile_key))) as source_tile:\n",
     "        height = source_tile.profile['height']\n",
     "        width = source_tile.profile['width']\n",
-    "        \n",
+    "\n",
     "    # Open first object to obtain profile metadata\n",
-    "    with rasterio.open(storage.get_cloudobject(chunks[0][2], stream=True)) as chunk_src:\n",
+    "    with rasterio.open(BytesIO(storage.get_cloudobject(chunks[0][2]))) as chunk_src:\n",
     "        profile = chunk_src.profile\n",
     "        profile.update(width=width)\n",
     "        profile.update(height=height)\n",
     "\n",
     "    # Iterate each object and print its block into the destination file\n",
     "    merged_file = os.path.join(tempfile.gettempdir(), data_field + '_' + tile_key)\n",
-    "    with rasterio.open(merged_file, 'w', **profile) as dest: \n",
+    "    with rasterio.open(merged_file, 'w', **profile) as dest:\n",
     "        for chunk in chunks:\n",
     "            j, i, co = chunk\n",
-    "            with rasterio.open(storage.get_cloudobject(co, stream=True)) as src:\n",
+    "            with rasterio.open(BytesIO(storage.get_cloudobject(co))) as src:\n",
     "                step_w = math.floor(width / SPLITS)\n",
     "                step_h = math.floor(height / SPLITS)\n",
     "                curr_window = Window(round(step_w * i), round(step_h * j), src.width, src.height)\n",
     "                content = src.read(1)\n",
     "                dest.write(content, 1, window=curr_window)\n",
-    "    \n",
+    "\n",
     "    output_key = os.path.join(DTM_PREFIX, data_field, tile_key)\n",
     "    with open(merged_file, 'rb') as out_file:\n",
-    "        storage.put_object(bucket=DATA_BUCKET, key=output_key, body=out_file)  \n",
-    "    \n",
+    "        storage.put_object(bucket=DATA_BUCKET, key=output_key, body=out_file)\n",
+    "\n",
     "    return output_key"
    ]
   },
@@ -1489,19 +1503,20 @@
    "outputs": [],
    "source": [
     "def compute_evapotranspiration_by_shape(tem, hum, win, rad, extrad, dst):\n",
-    "    \n",
+    "\n",
     "    import fiona\n",
     "    from shapely.geometry import shape, box\n",
     "    from rasterio import features\n",
-    "    \n",
+    "\n",
     "    non_arable_land = ['AG', 'CA', 'ED', 'FO', 'IM', 'PA', 'PR', 'ZU', 'ZV']\n",
-    "    \n",
-    "    with fiona.open('zip://shape.zip') as shape_src:\n",
+    "\n",
+    "    #with fiona.open('zip://home/docker/shape.zip') as shape_src:\n",
+    "    with fiona.open('zip:///tmp/shape.zip') as shape_src:\n",
     "        for feature in shape_src.filter(bbox=tem.bounds):\n",
-    "            KC = get_kc(feature) \n",
-    "            if KC is not None:   \n",
-    "                geom = shape(feature['geometry'])  \n",
-    "                window = get_geometry_window(tem, geom.bounds)              \n",
+    "            KC = get_kc(feature)\n",
+    "            if KC is not None:\n",
+    "                geom = shape(feature['geometry'])\n",
+    "                window = get_geometry_window(tem, geom.bounds)\n",
     "                win_transform = rasterio.windows.transform(window, tem.transform)\n",
     "                # Convert shape to raster matrix\n",
     "                image = features.rasterize([geom],\n",
@@ -1583,31 +1598,32 @@
    "outputs": [],
    "source": [
     "def combine_calculations(tile_key, storage):\n",
-    "    \n",
     "    from functools import partial\n",
     "      \n",
     "    # Download shapefile\n",
     "    shapefile = storage.get_object(bucket=DATA_BUCKET, key='shapefile_murcia.zip', stream=True)\n",
-    "    with open('shape.zip', 'wb') as shapf:\n",
+    "\n",
+    "    with open('/tmp/shape.zip', 'wb') as shapf:\n",
     "        for chunk in iter(partial(shapefile.read, 200 * 1024 * 1024), ''):\n",
     "            if not chunk:\n",
     "                break\n",
     "            shapf.write(chunk)\n",
     "    try:\n",
-    "        temp = storage.get_object(bucket=DATA_BUCKET, key=os.path.join(DTM_PREFIX, 'temp', tile_key), stream=True)\n",
-    "        humi = storage.get_object(bucket=DATA_BUCKET, key=os.path.join(DTM_PREFIX, 'humi', tile_key), stream=True)\n",
-    "        rad = storage.get_object(bucket=DATA_BUCKET, key=os.path.join(DTM_PREFIX, 'rad', tile_key), stream=True)\n",
-    "        extrad = storage.get_object(bucket=DATA_BUCKET, key=os.path.join(DTM_PREFIX, 'extr', tile_key), stream=True)\n",
-    "        wind = storage.get_object(bucket=DATA_BUCKET, key=os.path.join(DTM_PREFIX, 'wind', tile_key), stream=True)\n",
+    "        temp = storage.get_object(bucket=DATA_BUCKET, key=os.path.join(DTM_PREFIX, 'temp', tile_key))\n",
+    "        humi = storage.get_object(bucket=DATA_BUCKET, key=os.path.join(DTM_PREFIX, 'humi', tile_key))\n",
+    "        rad = storage.get_object(bucket=DATA_BUCKET, key=os.path.join(DTM_PREFIX, 'rad', tile_key))\n",
+    "        extrad = storage.get_object(bucket=DATA_BUCKET, key=os.path.join(DTM_PREFIX, 'extr', tile_key))\n",
+    "        wind = storage.get_object(bucket=DATA_BUCKET, key=os.path.join(DTM_PREFIX, 'wind', tile_key))\n",
     "    except StorageNoSuchKeyError:\n",
+    "        print(\"Storage error\")\n",
     "        return None\n",
     "    \n",
     "    output_file = os.path.join(tempfile.gettempdir(), 'eva' + '_' + tile_key)\n",
-    "    with rasterio.open(temp) as temp_raster:\n",
-    "        with rasterio.open(humi) as humi_raster:\n",
-    "            with rasterio.open(rad) as rad_raster:\n",
-    "                with rasterio.open(extrad) as extrad_raster:\n",
-    "                    with rasterio.open(wind) as wind_raster:\n",
+    "    with rasterio.open(BytesIO(temp)) as temp_raster:\n",
+    "        with rasterio.open(BytesIO(humi)) as humi_raster:\n",
+    "            with rasterio.open(BytesIO(rad)) as rad_raster:\n",
+    "                with rasterio.open(BytesIO(extrad)) as extrad_raster:\n",
+    "                    with rasterio.open(BytesIO(wind)) as wind_raster:\n",
     "                        profile = temp_raster.profile\n",
     "                        profile.update(nodata=0)\n",
     "                        with rasterio.open(output_file, 'w+', **profile) as dst:\n",
