--- a/water-consumption/WaterConsumption.ipynb
+++ b/water-consumption/WaterConsumption.ipynb
@@ -283,9 +283,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-06-28 20:43:44,803 [INFO] lithops.config -- Lithops v2.6.0\n",
-      "2022-06-28 20:43:44,818 [INFO] lithops.storage.backends.ibm_cos.ibm_cos -- IBM COS client created - Region: us-south\n",
-      "2022-06-28 20:43:44,819 [INFO] lithops.serverless.backends.ibm_cf.ibm_cf -- IBM CF client created - Region: us-south - Namespace: aitor_dev_us_south\n"
+      "2022-06-28 20:43:44,803 [INFO] config.py:139 -- Lithops v3.1.0 - Python3.10\n",
+      "2022-06-28 20:43:44,818 [INFO] aws_s3.py:68 -- S3 client created - Region: us-east-1\n",
+      "2022-06-28 20:43:44,819 [INFO] aws_lambda.py:106 -- AWS Lambda client created - Region: us-east-1\n"
      ]
     }
    ],
