fixed plot WaterConsumption.ipynb

--- a/water-consumption/WaterConsumption.ipynb
+++ b/water-consumption/WaterConsumption.ipynb
@@ -1862,9 +1862,12 @@
    "source": [
     "from matplotlib import pyplot as plt\n",
     "\n",
+    "tile = res_eva[0]"
+    "tile_key = os.path.basename(tile)"
+    "tile_id, _ = os.path.splitext(tile_key)"
     "fig, ax = plt.subplots()\n",
     "\n",
-    "with rasterio.open('PNOA_MDT05_ETRS89_HU30_0891_LID.tiff') as src:\n",
+    "with rasterio.open(BytesIO(storage.get_object(bucket=DATA_BUCKET, key=tile))) as src:\n",
     "    arr = src.read(1, out_shape=(src.height, src.width))\n",
     "    ax.set_title(tile_id)\n",
     "    img = ax.imshow(arr, cmap='Greens')\n",
