corrected WaterConsumption.ipynb

--- a/water-consumption/WaterConsumption.ipynb
+++ b/water-consumption/WaterConsumption.ipynb
@@ -1862,9 +1862,9 @@
    "source": [
     "from matplotlib import pyplot as plt\n",
     "\n",
-    "tile = res_eva[0]",
-    "tile_key = os.path.basename(tile)",
-    "tile_id, _ = os.path.splitext(tile_key)",
+    "tile = res_eva[0]\n",
+    "tile_key = os.path.basename(tile)\n",
+    "tile_id, _ = os.path.splitext(tile_key)\n",
     "fig, ax = plt.subplots()\n",
     "\n",
     "with rasterio.open(BytesIO(storage.get_object(bucket=DATA_BUCKET, key=tile))) as src:\n",
